force-app/main/default/objects/SearchSetup__c/SearchSetup__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains search setup values</description>
    <label>Search Setup</label>
</CustomObject>