force-app/main/default/objects/SearchSetup__c/fields/AppointmentDuration__c.field-meta.xml
<CustomField>
    <fullName>AppointmentDuration__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Standard appomit duration in minutes</description>
    <label>Appointment duration (minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>