force-app/main/default/objects/SearchSetup__c/fields/EffectiveDatesOverlappingControl__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDatesOverlappingControl__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To avoid effective dates overlapping in CalendarTimetable object</description>
    <label>Effective Dates Overlapping Control</label>
    <type>Checkbox</type>
</CustomField>