force-app/main/default/objects/SearchSetup__c/fields/MaxTime__c.field-meta.xml
<CustomField>
    <fullName>MaxTime__c</fullName>
    <description>Tiempo máximo duración de cita (minutos).</description>
    <inlineHelpText>Tiempo máximo duración de cita (minutos).</inlineHelpText>
    <label>Tiempo Máximo</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>