force-app/main/default/objects/SearchSetup__c/fields/SearchByEvents__c.field-meta.xml
<CustomField>
    <fullName>SearchByEvents__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Search by events yet created istead of Calendar Timetable of Calendar Setting</description>
    <label>Search By Events</label>
    <type>Checkbox</type>
</CustomField>