force-app/main/default/objects/SearchSetup__c/fields/SearchDaysForward__c.field-meta.xml
<CustomField>
    <fullName>SearchDaysForward__c</fullName>
    <defaultValue>7</defaultValue>
    <description>Days fordward to search from today</description>
    <label>Search days forward</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>